--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=SFTP-Spring
+# --- DataSource (PostgreSQL) ---
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=kakha
+spring.datasource.password=postgres123
+
+# Connection pool (optional sane defaults)
+spring.datasource.hikari.maximum-pool-size=10
+
+# --- JPA / Hibernate ---
+# In dev, this creates/updates tables automatically based on your entities.
+# In production, use schema migrations (Flyway/Liquibase) and set validate.
+spring.jpa.hibernate.ddl-auto=update
+
+# Show SQL logs (optional)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# PostgreSQL dialect (optional, Boot often infers it)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# --- Server ---
+server.port=8080
