--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SFTP-Spring
 # --- DataSource (PostgreSQL) ---
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/sftp_db
 spring.datasource.username=kakha
 spring.datasource.password=postgres123
 
