--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=SFTP-Spring
+spring.application.name=File-Drive-Spring
 # --- DataSource (PostgreSQL) ---
 spring.datasource.url=jdbc:postgresql://localhost:5432/sftp_db
 spring.datasource.username=kakha
