web uploads & basic deletion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,16 +8,17 @@ spring.datasource.password=postgres123
 spring.datasource.hikari.maximum-pool-size=10
 
 # --- JPA / Hibernate ---
-# In dev, this creates/updates tables automatically based on your entities.
-# In production, use schema migrations (Flyway/Liquibase) and set validate.
 spring.jpa.hibernate.ddl-auto=update
 
-# Show SQL logs (optional)
+# Show SQL logs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# PostgreSQL dialect (optional, Boot often infers it)
+# PostgreSQL dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+#file size limits
+spring.servlet.multipart.max-file-size=20GB
+spring.servlet.multipart.max-request-size=20GB
 # --- Server ---
 server.port=8080
